--- a/Client/package.json
+++ b/Client/package.json
@@ -10,6 +10,7 @@
     "npm": "^8.15.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.4.0",
     "react-loader-spinner": "^5.1.5",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.0",
